--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
     <!-- 導覽列 -->
     <nav class="container py-16 d-flex align-center justify-between">
         <ul class="d-flex align-center">
-            <li class="me-48"><a href="index.html"><img src="/pic/logo.svg" alt="logo"></a></li>
+            <li class="me-48"><a href="index.html"><img src="./pic/logo.svg" alt="logo"></a></li>
             <li class="me-40"><a href="products.html" class="py-12"></a>商品列表</li>
             <li><a href="story.html" class="py-12"></a>品牌故事</li>
         </ul>
