--- a/products.html
+++ b/products.html
@@ -154,7 +154,7 @@
     <div class="footer">
         <div class="container">
             <nav class="container py-16 d-flex align-center justify-between">
-                <a href="index.html"><img src="/pic/logo.svg" alt="logo"></a>
+                <a href="index.html"><img src="./pic/logo.svg" alt="logo"></a>
                 <ul class="d-flex align-center">
                     <li class="me-40"><a href="products.html" class="py-12">商品列表</a></li>
                     <li><a href="story.html" class="py-12">品牌故事</a></li>
@@ -167,5 +167,6 @@
     </div>
 
 </body>
+
 
 </html>
